# Claude-Desk

./: .gitignore  Makefile  README.md  index.html  package.json  technology.md  vite.config.ts  vitest.config.ts
.github/workflows/: build-macos.yml
docs/: assumptions.md  debug-notes.md  full-access-mode.md  git-branch-switcher.md  iteration-loop.md  manual-left-rail.md  manual-resume.md  manual-terminal-checklist.md  manual-terminal-rendering.md  manual-terminal.md  mcp-debugging.md  non_ui_sweep.md  resume-design.md  terminal-output-hardening-summary.md  threads-model.md  ui-ux-review.md
scripts/: claude_pty_smoke.py  generate-icons.sh  install-unsigned-macos.sh  verify.mjs
src/: App.tsx  main.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: git_tools.rs  macos_notifications.m  macos_notifications.rs  main.rs  models.rs  runner.rs  skills.rs  storage.rs
src/components/: AddWorkspaceModal.tsx  BottomBar.tsx  BulkImportClaudeSessionsModal.tsx  CommandPalette.tsx  CommitModal.tsx  Composer.tsx  FullAccessWarningModal.tsx  HeaderBar.tsx  ImportSessionModal.tsx  LandingView.tsx  LeftRail.tsx  PreflightModal.tsx  SettingsLayout.tsx  SettingsModal.tsx  SimpleComposer.tsx  TerminalPanel.tsx  ThreadSkillsPopover.tsx  ToastRegion.tsx  TranscriptView.tsx  WorkspaceShellDrawer.tsx
src/lib/: api.ts  appearance.ts  skillUsage.ts  taskCompletionAlerts.ts  terminalContentUpdate.ts  terminalDebug.ts  terminalFollowState.ts  (+9 more)
tests/: polyfills.cjs  setup.ts
(+30 files in other folders)
