[package]
name = "claude_desk"
version = "0.1.17"
description = "Claude Desk"
authors = ["Claude Desk"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2.0.2", features = [] }

[dependencies]
anyhow = "1.0.93"
chrono = { version = "0.4.38", features = ["serde"] }
dirs = "5.0.1"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
tauri = { version = "2.1.1", features = [] }
tauri-plugin-dialog = "2.6.0"
arboard = "3"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp", "bmp", "tiff"] }
tokio = { version = "1.41.1", features = ["full"] }
portable-pty = "0.8.1"
libc = "0.2.182"
uuid = { version = "1.11.0", features = ["v4", "serde"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
